--- a/tunes-for-tuesday/package.json
+++ b/tunes-for-tuesday/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-spotify-login": "^0.9.1",
+    "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
     "start": "",
