--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@mysql/xdevapi": "^8.0.16",
+    "firebase": "^6.0.4",
+    "firebase-admin": "^8.0.0",
+    "firebaseui": "^4.0.0",
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.1",
     "react-spotify-login": "^0.9.1",
-    "socket.io": "^2.2.0",
     "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
