--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mysql/xdevapi": "^8.0.16",
     "firebase": "^6.0.4",
-    "firebase-admin": "^8.0.0",
     "firebaseui": "^4.0.0",
+    "firebase-admin": "^8.0.0",
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
-    "react-spotify-login": "^0.9.1",
-    "spotify-web-api-js": "^1.2.0"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "",
@@ -32,7 +29,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "nodemon": "^1.19.0"
-  }
+  "devDependencies": {}
 }
